--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "amazon-cognito-identity-js": "^5.2.8",
+    "aws-sdk": "^2.1135.0",
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
@@ -13,6 +15,7 @@
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.1",
+    "react-jupyter-notebook": "^0.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.0",
     "react-user-profile": "^1.0.3",
